--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
   <head>
+    <link href="/app.css" rel="stylesheet" />
     <title>Sample App</title>
   </head>
   <body>
